Fixed Bug - Most notes show even if folder collapsed ever since adding password feature

--- a/src/FileNavigator.css
+++ b/src/FileNavigator.css
@@ -121,9 +121,9 @@
     color: #FF6B6B;
 }
 
-[data-hidden="false"] {
+/* [data-hidden="false"] {
     display: block !important;
-}
+} */
 
 [data-hidden="true"] {
     display: none !important;
